Add Boostrap and first design (Alpha)

--- a/src/TodoList.Wasm/wwwroot/index.html
+++ b/src/TodoList.Wasm/wwwroot/index.html
@@ -6,7 +6,8 @@
     <title>TodoList.Wasm</title>
     <base href="/" />
     <link href="css/app.css" rel="stylesheet" />
-    
+    <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.5.0/font/bootstrap-icons.min.css" rel="stylesheet">
     <!-- If you add any scoped CSS files, uncomment the following to load them
     <link href="TodoList.Wasm.styles.css" rel="stylesheet" /> -->
 </head>
@@ -20,6 +21,7 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="js/bootstrap/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
